[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Objects/DoorWall.png" type="Texture" id=1]
[ext_resource path="res://Src/Objects/DoorWall.gd" type="Script" id=2]

[sub_resource type="Animation" id=3]
resource_name = "open_door"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 1, 16 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 12, 16 )

[node name="DoorWall" type="Node2D"]
script = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/open_door = SubResource( 3 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 4, -16 )
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 4, -16 )
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 4, -16 )
texture = ExtResource( 1 )
hframes = 3
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
